--- a/css/index.css
+++ b/css/index.css
@@ -28,8 +28,10 @@ header{
 
 }
 
-.logo{
+.logo img{
     flex: 1;
+    width: 200px;
+    height: auto;
 }
 
 .menu{
@@ -68,4 +70,7 @@ header{
     border: none;
     border-bottom: 1px solid #111;
     
+}
+footer {
+    text-align: center;
 }
